--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,11 +5,7 @@
 default:
   image: julia:1.8.3
   before_script:
-    - apt update && apt install -y git
-    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@git-ce.rwth-aachen.de/diss/kerneldistributions.jl.git dev/KernelDistributions.jl
-    - ls -l dev/KernelDistributions.jl
-    # - julia --project=@. -e "import Pkg; Pkg.develop("dev/KernelDistributions.jl"); Pkg.build()"
-    - julia --project=@. -e "import Pkg; Pkg.add("dev/KernelDistributions.jl");"
+    - julia --project=@. -e 'import Pkg; Pkg.add(url=first(ARGS)); Pkg.build()' https://gitlab-ci-token:$CI_JOB_TOKEN@git-ce.rwth-aachen.de/diss/kerneldistributions.jl.git
 
 test:
   stage: test
