--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@
 default:
   image: julia:latest
   before_script:
-    - julia --project=@. -e 'import Pkg; Pkg.add(url=first(ARGS)); Pkg.build()' https://gitlab-ci-token:$CI_JOB_TOKEN@git-ce.rwth-aachen.de/diss/kerneldistributions.jl.git
+    - julia --project=@. -e 'import Pkg; Pkg.add(url=first(ARGS)); Pkg.build();' https://gitlab-ci-token:$CI_JOB_TOKEN@git-ce.rwth-aachen.de/diss/kerneldistributions.jl.git
 
 test:
   stage: test
@@ -26,6 +26,7 @@ test:
 pages:
   stage: deploy
   script:
+    - julia --project=docs -e 'import Pkg; Pkg.add(url=first(ARGS));' https://gitlab-ci-token:$CI_JOB_TOKEN@git-ce.rwth-aachen.de/diss/kerneldistributions.jl.git
     - julia --project=docs -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate();'
     - julia --project=docs --color=yes docs/make.jl
     - mv docs/build public # move to the directory picked up by Gitlab pages
