--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,7 @@ test:
 pages:
   stage: deploy
   script:
-    - julia --project=docs -e 'import Pkg; Pkg.add(url=first(ARGS));' https://gitlab-ci-token:$CI_JOB_TOKEN@git-ce.rwth-aachen.de/diss/kerneldistributions.jl.git
-    - julia --project=docs -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate();'
+    - julia --project=docs -e 'import Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.add(url=first(ARGS)); Pkg.instantiate();' https://gitlab-ci-token:$CI_JOB_TOKEN@git-ce.rwth-aachen.de/diss/kerneldistributions.jl.git
     - julia --project=docs --color=yes docs/make.jl
     - mv docs/build public # move to the directory picked up by Gitlab pages
   artifacts:
