--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@
 default:
   image: julia:1.8
   before_script:
+    - apt update && apt install -y git
     # Add repo dependencies
     - sed -i "s|https://git-ce.|https://gitlab-ci-token:$CI_JOB_TOKEN@git-ce.|g" Manifest.toml
     - julia --project=@. -e 'import Pkg; Pkg.instantiate(); Pkg.build();'
