--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           version: "1.11"
           arch: "x64"
+      - uses: julia-actions/cache@v2  
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
